# agents

./: .env.example  .gitignore  ARCHITECTURE.md  CODEX_LOG.md  Dockerfile  PROJECT.md  README.md  TASKS.md  docker-compose.yml  netlify.toml  pyproject.toml
agent_docs/: README.md  builder.md  debugger.md  planner.md  qa_editor.md  qual_builder.md  quant_builder.md  reporter.md  team_planner.md
corpus/: README.md  index.json
docs/: architecture.md  executive_model.md  project_plan.md
reports/: .run_meta.json  20260317_031118_planner_weekly_research_plan.md  20260317_031134_builder_build_output.md  20260317_031148_verifier_verification_report.md  20260317_031202_reporter_executive_summary.md  20260317_033744_planner_weekly_research_plan.md  20260317_034443_planner_weekly_research_plan.md  20260317_035051_builder_build_output.md  20260317_040051_verifier_verification_report.md  20260317_041635_planner_weekly_research_plan.md  20260317_043551_planner_research_plan.md  20260317_044501_builder_research_section.md  20260317_045708_verifier_verification_report.md  20260317_050116_reporter_executive_summary.md  20260317_053030_planner_research_plan.md  20260317_053216_builder_research_section.md  20260317_053756_verifier_verification_report.md  20260317_054110_reporter_executive_summary.md  20260317_060040_planner_research_plan.md  20260317_060423_builder_research_section.md  20260317_061604_verifier_verification_report.md  20260317_062029_planner_research_plan.md  20260317_064615_builder_research_section.md  20260317_065113_verifier_verification_report.md  (+122 more)
scripts/: test.sh  (+4 more)
(+236 files in other folders)
