[project]
name = "agentorg"
version = "0.1.0"
description = "Autonomous multi-agent research organization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "slack-sdk>=3.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.4",
    "weasyprint>=62.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "loguru>=0.7.2",
    "tavily-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "nbformat>=5.10.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
]

[project.scripts]
agentorg = "agentorg.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentorg"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=agentorg --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["agentorg"]
omit = ["tests/*"]
